Left AppointmentService pending and replaced Collectors.toList by toList on the mappers.